--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section class="intro">
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2><figure>
-        <img class='user-image' src="img/7nTq.gif" width="700" height="500" alt="Лого">
+        <img class='user-image' src="https://github.com/artyrei-frontend/My-site/blob/main/7nTq.gif" width="700" height="500" alt="Лого">
       </figure></div>
       
       <div class="container"> <h3>Пара слов о себе</h3> </div>
